--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@material-ui/icons": "^4.11.2",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swiper": "^8.0.6"
   },
   "devDependencies": {
     "eslint": "8.9.0",
